Jetty-12 onCommit semantic (#7654)
* Added onCommit semantic

 + now named prepareResponse
 + HttpFields.Mutable is now an interface
 + ResponseHttpFields is now a wrapper of HttpFields